--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    background-color: #1F242B;
+    font-family: "Poppins", sans-serif;
 }
 
 /* switch settings 👇 */
@@ -97,35 +94,89 @@ body{
 .dark-mode {
     margin: 1rem;
 }
-.menu{
+
+.menu {
     width: 40%;
-    background-color: #29955F;
+    background-color: #1F242B;
+    transition: 0.5s;
 }
-header{
+
+header {
     display: flex;
     justify-content: space-between;
-    /* border: solid; */
+    background-color: #37C67E;
+    transition: 0.5s;
 }
-a{
+
+a {
     text-decoration: 0;
     color: #fff;
     background-color: transparent;
     float: right;
     margin: 1rem;
 }
-.left{
-    background-color: #29955F;
+
+.rigth {
+    background-color: #1F242B;
     float: right;
     /* border: solid; */
     height: 100vh;
     width: 40%;
+    transition: 0.5s;
 }
-.dark {
-    background-color: #43ee99;
+
+.principal {
+    background-color: #37C67E;
+    width: 60%;
+    height: 100vh;
+    transition: 0.5s;
 }
-.dark .left{
-    background-color: #1f252c;
-}
-.dark .menu {
+
+.dark header {
     background-color: #1F242B;
+}
+
+.dark .principal {
+    background-color: #1F242B;
+}
+
+.dark .rigth {
+    background-color: #37C67E;
+}
+
+.dark .menu {
+    background-color: #37C67E;
+}
+
+.homePage {
+    display: flex;
+}
+
+.apresentacao {
+    margin: 25%;
+    /* border: solid; */
+    width: 70%;
+}
+
+.saudacao {
+    color: #1F242B;
+    font-size: 1.5em;
+}
+
+.nome {
+    color: #fff;
+    font-size: 4rem;
+}
+
+.sobrenome {
+    color: #1F242B;
+    font-size: 4rem;
+}
+
+.dark .sobrenome {
+    color: #37C67E;
+}
+
+.dark .saudacao {
+    color: #37C67E;
 }
