--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,4 +425,38 @@ form div{
     background-color:  #37ffd4;
     transform: scale(1.1);
 }
+footer{
+    height: 40vh;
+    background-color: #66CAC5;
+    display: flex;
+    flex-direction: column;
+    transition: 0.5s;
+}
+footer a{
+    margin-top: 7%;
+    font-size: 1em;
+    /* border: solid; */
+    text-align: center;
+}
+footer div{
+    width: 10%;
+    display: flex;
+    text-align: center;
+    margin: 1em 43%;
+}
+footer div img{
+    width: 3em;
+    height: 3em;
+}
+footer h1{
+    text-align: center;
+    margin: 2rem;
+}
+.dark footer{
+    background-color: #1F242B;
+}
+.dark footer h1,
+.dark footer a{
+    color: #37C67E;
+}
 
