--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,10 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-div,img,p:hover{
+
+div,
+img,
+p:hover {
     cursor: pointer;
 }
 
@@ -109,9 +112,11 @@ label {
     background-color: #EDFBFD;
     transition: ease-in-out 0.5s;
 }
-body{
+
+body {
     background-color: #66CAC5;
 }
+
 .dark {
     background-color: #1F242B;
 }
@@ -138,6 +143,7 @@ a {
     width: 40%;
     transition: ease-in-out 0.5s;
 }
+
 .principal {
     background-color: #66CAC5;
     width: 60%;
@@ -157,7 +163,8 @@ a {
 .dark .rigth {
     background-color: #37C67E;
 }
-dialog{
+
+dialog {
     width: 25%;
     height: 35vh;
     background-color: transparent;
@@ -252,17 +259,21 @@ dialog{
 .dark .devWeb p {
     color: #37C67E;
 }
-.dark .devWeb p:hover{
-    color:#1F242B ;
+
+.dark .devWeb p:hover {
+    color: #1F242B;
 }
-.devWeb .seta:hover + p,
+
+.devWeb .seta:hover+p,
 .devWeb:hover p {
-    color: #1F242B; 
+    color: #1F242B;
 }
+
 .dark .devWeb:hover {
     color: #1F242B;
     background-color: #37C67E;
 }
+
 .img {
     width: 35%;
     margin: 0;
@@ -270,15 +281,15 @@ dialog{
     padding: 0;
     position: absolute;
     top: 50%;
-    left: 60%; 
+    left: 60%;
     transform: translate(-50%, -50%);
-    
-  }
 
-  .img img{
+}
+
+.img img {
     border: solid 1px #00FFD4;
     width: 100%;
-  }
+}
 
 
 /* Css parte de skills*/
@@ -304,19 +315,29 @@ dialog{
 .frontEnd {
     display: flex;
 }
-[data-anima]{
+
+[data-anima] {
     opacity: 0;
     transition: 2s;
 }
-[data-anima="left"]{
-    transform: translate3d(-50px,0,0);
+
+[data-anima="left"] {
+    transform: translate3d(-50px, 0, 0);
 }
-[data-anima="rigth"]{
-    transform: translate3d(50px,0,0);
+
+[data-anima="rigth"] {
+    transform: translate3d(50px, 0, 0);
 }
-.animacao{
+[data-anima="bottom"]{
+    transform: translate3d(0, 1000px, 0);
+}
+
+.animacao {
     opacity: 1;
-    transform: translate3d(0,0,0);
+    transform: translate3d(0, 0, 0);
+}
+.animacao-button{
+    transform: translate3d(0, 25px, 0);
 }
 
 .habilidade {
@@ -400,41 +421,82 @@ html {
     background-color: #1F242B;
     border: solid #1F242B;
 }
-.div-proj{
+
+.div-proj {
     display: flex;
 }
-.textos{
-    margin-left: 20%;
+
+.textos {
+    margin: 3% 10%;
     /* border: solid; */
     width: 30%;
 }
 
 .titulo {
     margin: 5%;
+
 }
 
 .titulo h1 {
     font-size: 4em;
     color: white;
-    margin: 0.em 0;
+    margin: 0 0;
+    /* border: solid; */
+}
+
+.btn-github {
+    cursor: pointer;
+    display: flex;
+    gap: 0.5rem;
+    border: none;
+
+    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    border-radius: 100px;
+    font-weight: 800;
+    place-content: center;
+
+    padding: 0.75rem 1rem;
+    font-size: 0.825rem;
+    line-height: 1rem;
+
+    background-color: rgba(0, 0, 0);
+    color: white;
+}
+
+.btn-github:hover {
+    box-shadow:
+        inset 0 1px 0 0 rgba(255, 255, 255, 0.08),
+        inset 0 0 0 1px rgba(252, 232, 3, 0.08);
+    color: #e9e9e9;
+    transform: translate(0, -0.25rem);
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.btn-github a {
+    margin: 0;
+    text-decoration: none;
+    color: white;
 }
 
 .areaProj {
-   display: flex;
-   justify-content: center;
-   flex-direction: column;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
-.Imc{
+.Imc {
     background-image: url(/assets/img/calculadora\ de\ imc.png);
 }
-.list{
+
+.list {
     background-image: url(/assets/img/lista\ de\ tarefas.png);
 }
-.calc{
+
+.calc {
     background-image: url(/assets/img/calculadora.png);
 }
-.preview{
+
+.preview {
     height: 30vh;
     width: 20%;
     background-size: cover;
@@ -442,7 +504,7 @@ html {
     box-shadow: 10px 5px 5px black;
 }
 
-.dark .titulo h1 { 
+.dark .titulo h1 {
     color: #37C67E;
     transition: ease-in-out 0.5s;
 }
@@ -539,16 +601,17 @@ form div {
     background-color: #37ffd4;
     transform: scale(1.1);
 }
-.fotoDois img{
+
+.fotoDois img {
     width: 15%;
     border: solid 1px #EDFBFD;
 }
 
-.dark .fotoDois img{
+.dark .fotoDois img {
     border: solid #37C67E 1px;
 }
 
-.fotoDois{
+.fotoDois {
     /* border: solid; */
     width: 50%;
     display: flex;
@@ -648,12 +711,14 @@ footer h1 {
     .habilidade img {
         width: 100%;
     }
-    .habilidade h4{
+
+    .habilidade h4 {
         font-size: 1em;
         border: solid;
         width: 100%
     }
-    .devWeb{
+
+    .devWeb {
         font-size: 0.7em;
     }
 }
@@ -677,6 +742,7 @@ footer h1 {
         text-align: center;
     }
 }
-.preview img{
+
+.preview img {
     width: 100%;
 }
