--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,7 +291,9 @@ dialog {
     border: solid 1px #00FFD4;
     width: 100%;
 }
-
+.img2{
+    display: none;
+}
 
 /* Css parte de skills*/
 
@@ -712,86 +714,3 @@ footer h1 {
 
 
 
-@media (max-width: 1629px) {
-    .devWeb {
-        width: 35%;
-    }
-}
-
-@media (max-width: 1521px) {
-    .habilidade {
-        width: 12%;
-    }
-
-    .backEnd {
-        margin-right: 8rem;
-        width: 43rem;
-        /* border: solid; */
-    }
-}
-
-@media (max-width: 1329px) {
-    .devWeb {
-        width: 42%;
-    }
-}
-
-@media (max-width: 1107px) {
-    .devWeb {
-        width: 45%;
-    }
-}
-
-@media (max-width: 1034px) {
-    .devWeb {
-        width: 50%;
-        font-size: 0.9em;
-        text-align: center;
-        height: 4vh;
-    }
-
-    .seta {
-        height: 4vh;
-    }
-}
-
-@media (max-width: 968px) {
-
-    .habilidade img {
-        width: 100%;
-    }
-
-    .habilidade h4 {
-        font-size: 1em;
-        border: solid;
-        width: 100%
-    }
-
-    .devWeb {
-        font-size: 0.7em;
-    }
-}
-
-@media (max-width: 926px) {
-    .devWeb {
-        width: 60%;
-    }
-}
-
-@media (max-width: 888px) {
-    .devWeb {
-        width: 65%;
-        text-align: center;
-    }
-}
-
-@media (max-width: 863px) {
-    .devWeb {
-        width: 65%;
-        text-align: center;
-    }
-}
-
-.preview img {
-    width: 100%;
-}
