--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,10 +502,14 @@ html {
     padding: 0.75rem 1rem;
     font-size: 0.825rem;
     line-height: 1rem;
-
+    width: 12rem;
     background-color: rgba(0, 0, 0);
     color: white;
     margin-top: 4%;
+    margin:4% 5%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-github:hover {
