--- a/assets/css/versaoMobile.css
+++ b/assets/css/versaoMobile.css
@@ -239,17 +239,16 @@
 
         .img2 {
             display: block;
-            width: 75%;
-
+            width: 40%;
+            border: solid 1px #00FFD4;
             height: 45%;
             padding: 0;
-            margin-top: 5%;
-            margin-left: 50%;
+            margin: 16% 50% 0 50%;
             transform: translate(-50%, -50%);
         }
 
         .devWeb {
-            margin-top: 10%;
+            margin: 10% 16%;
         }
 
         .img2 img {
@@ -392,11 +391,12 @@
 
         .img2 {
             display: block;
-            width: 100%;
+            width: 40%;
             height: 45%;
             padding: 0;
             margin-top: 30%;
             margin-left: 50%;
+            margin: 20% 50% 0 50%;
             transform: translate(-50%, -50%);
         }
 
@@ -405,7 +405,6 @@
         }
 
         .img2 img {
-            border: solid 1px #00FFD4;
             width: 100%;
         }
 
