--- a/assets/css/versaoMobile.css
+++ b/assets/css/versaoMobile.css
@@ -67,6 +67,14 @@
 
         .preview {
             width: 40%;
+            height: 19rem;
+        }
+        #projetos{
+            margin: 75% 0  0 0;
+        }
+        .div-proj{
+            width: 100%;
+            height: 100%;
         }
 
     }
@@ -74,6 +82,7 @@
     @media (max-width: 1329px) {
         .devWeb {
             width: 42%;
+
         }
     }
 
@@ -117,6 +126,12 @@
         .preview {
             width: 40%;
         }
+        #projetos{
+            margin: 75% 0;
+        }
+        .div-proj{
+            width: 100%;
+        }
     }
 
 
@@ -131,7 +146,6 @@
         .seta {
             height: 6vh;
         }
-
 
     }
 
@@ -514,6 +528,13 @@
         }
 
     }
+
+    @media (max-width: 465px){
+        .img2{
+            margin-top: 30%;
+        }
+    }
+
 
     @media screen and (max-width: 390px) {
         header {
