--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ p:hover {
 
 .ui-switch input {
     display: none;
+    position: fixed;
 
 }
 
@@ -110,7 +111,7 @@ label {
 .menu {
     width: 40%;
     background-color: #EDFBFD;
-    transition: ease-in-out 0.5s;
+    transition: 0.5s;
 }
 
 body {
@@ -125,7 +126,7 @@ header {
     display: flex;
     justify-content: space-between;
     background-color: #66CAC5;
-    transition: ease-in-out 0.5s;
+    transition:0.5s;
 }
 
 a {
@@ -141,14 +142,14 @@ a {
     float: right;
     height: 100vh;
     width: 40%;
-    transition: ease-in-out 0.5s;
+    transition: 0.5s;
 }
 
 .principal {
     background-color: #66CAC5;
     width: 60%;
     height: 107vh;
-    transition: ease-in-out 0.5s;
+    transition: 0.5s;
     /* border: solid; */
 }
 
@@ -399,7 +400,7 @@ dialog {
     color: white;
     margin: 1rem;
     font-size: 2em;
-    transition: ease-in-out 0.s;
+    transition: 0.5s;
 }
 
 .dark .habilidade h4 {
@@ -457,7 +458,7 @@ html {
 .projetos {
     height: 135vh;
     background-color: #66CAC5;
-    transition: ease-in-out 0.5s;
+    transition: 0.5s;
 
 }
 
@@ -555,7 +556,7 @@ html {
 
 .dark .titulo h1 {
     color: #37C67E;
-    transition: ease-in-out 0.5s;
+    transition: 0.5s;
 }
 
 /* Tela de contato */
@@ -564,7 +565,7 @@ html {
     height: 70vh;
     width: 100%;
     background-color: #66CAC5;
-    transition: ease-in-out 0.5s;
+    transition: 0.5s;
 }
 
 form {
@@ -680,7 +681,7 @@ footer {
     background-color: #66CAC5;
     display: flex;
     flex-direction: column;
-    transition: ease-in-out 0.5s;
+    transition: 0.5s;
     margin-top: 3%;
     padding: bottom 5%;
 }
@@ -717,6 +718,8 @@ footer h1 {
 .dark footer a {
     color: #37C67E;
 }
+
+
 
 
 
